v0.9c: Additional Settings (Bugfix)
- Optimized travel distance calculation
- Fixed Input Blocker being too small

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -263,6 +263,10 @@ body {
     height: 100%;
   }
 
+  #input-blocker {
+    height: 100%;
+  }
+
   /* Animations */
 
   @keyframes minimap {
